force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/PBS_gBUILD_ProjectFunding__c.object-meta.xml
<CustomObject>
    <description>gBUILD Project Funding information.</description>
    <label>gBUILD Project Funding</label>
    <nameField>
        <displayFormat>gbPf_{00000}</displayFormat>
        <label>PBSgBUILDPF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD Project Fundings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>