force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/fields/Asid__c.field-meta.xml
<CustomField>
    <fullName>Asid__c</fullName>
    <label>ASID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>