force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/fields/BudgetActivityCode__c.field-meta.xml
<CustomField>
    <fullName>BudgetActivityCode__c</fullName>
    <label>Budget Activity Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BA01</fullName>
            </value>
            <value>
                <fullName>BA02</fullName>
            </value>
            <value>
                <fullName>BA03</fullName>
            </value>
            <value>
                <fullName>BA04</fullName>
            </value>
            <value>
                <fullName>BA05</fullName>
            </value>
            <value>
                <fullName>BA06</fullName>
            </value>
            <value>
                <fullName>BA31</fullName>
            </value>
            <value>
                <fullName>BA51</fullName>
            </value>
            <value>
                <fullName>BA52</fullName>
            </value>
            <value>
                <fullName>BA53</fullName>
            </value>
            <value>
                <fullName>BA54</fullName>
            </value>
            <value>
                <fullName>BA55</fullName>
            </value>
            <value>
                <fullName>BA61</fullName>
            </value>
            <value>
                <fullName>BA62</fullName>
            </value>
            <value>
                <fullName>BA63</fullName>
            </value>
            <value>
                <fullName>BA64</fullName>
            </value>
            <value>
                <fullName>BA71</fullName>
            </value>
            <value>
                <fullName>BA80</fullName>
            </value>
            <value>
                <fullName>BA81</fullName>
            </value>
            <value>
                <fullName>BA90</fullName>
            </value>
            <value>
                <fullName>BA99</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>