force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>