force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/fields/FundingFY__c.field-meta.xml
<CustomField>
    <fullName>FundingFY__c</fullName>
    <label>Funding Fiscal Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>