force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/fields/FundingSource__c.field-meta.xml
<CustomField>
    <fullName>FundingSource__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AgencyOperating</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>CFCLineItem</fullName>
            </value>
            <value>
                <fullName>ECOE</fullName>
            </value>
            <value>
                <fullName>ESPC</fullName>
            </value>
            <value>
                <fullName>BA03 - ARRA Fund</fullName>
            </value>
            <value>
                <fullName>BA04 - ARRA Fund</fullName>
            </value>
            <value>
                <fullName>BA61 - Energy Division</fullName>
            </value>
            <value>
                <fullName>BA54 - Regionally Funded Repair and Alteration</fullName>
            </value>
            <value>
                <fullName>BA55 - ENE0000 - Original Energy Prospectus</fullName>
            </value>
            <value>
                <fullName>BA55 - ENWTR000 - Energy &amp; Water Retrofit Prospectus</fullName>
            </value>
            <value>
                <fullName>BA61 - Regional Budget</fullName>
            </value>
            <value>
                <fullName>BA63 - Rebate Fund</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>