force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/fields/FundingType__c.field-meta.xml
<CustomField>
    <fullName>FundingType__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>OriginalAmountFunded</fullName>
            </value>
            <value>
                <fullName>SubstitutionFunding</fullName>
            </value>
            <value>
                <fullName>SupplimentalFunding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>