force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <description>This is the parent ID for this object&apos;s RAHD_Project</description>
    <inlineHelpText>This is the parent ID for this object&apos;s RAHD_Project</inlineHelpText>
    <label>Project ID</label>
    <referenceTo>PBS_gBUILD_Project__c</referenceTo>
    <relationshipLabel>gBUILD Project Funding</relationshipLabel>
    <relationshipName>gBUILD_Project_to_Funding</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>