force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/validationRules/Funding_Fiscal_Year_Limitation.validationRule-meta.xml
<ValidationRule>
    <fullName>Funding_Fiscal_Year_Limitation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(FundingFY__c &lt;1950,FundingFY__c &gt;2100)</errorConditionFormula>
    <errorDisplayField>FundingFY__c</errorDisplayField>
    <errorMessage>Please enter a fiscal year between 1950 and 2100.</errorMessage>
</ValidationRule>