force-app/main/default/objects/PBS_gBUILD_ProjectFunding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProjectId__c</columns>
    <columns>Asid__c</columns>
    <columns>BudgetActivityCode__c</columns>
    <columns>Description__c</columns>
    <columns>FundingSource__c</columns>
    <columns>FundingType__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>